--- a/jtravels-site/package.json
+++ b/jtravels-site/package.json
@@ -8,11 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "framer-motion": "10.18.0",
-    "lucide-react": "0.344.0",
-    "tailwindcss": "3.4.1"
+    "next": "14.2.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.424.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0"
   }
 }
